// Copyright (c) 2020 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.daml.ledger.api.v1;

option java_outer_classname = "VersionServiceOuterClass";
option java_package = "com.daml.ledger.api.v1";
option csharp_namespace = "Com.Daml.Ledger.Api.V1";

service VersionService {

  rpc GetApiVersion (GetApiVersionRequest) returns (GetApiVersionResponse);
}

message GetApiVersionRequest {

  string ledger_id = 1;
}

message GetApiVersionResponse {

  string version = 1;
}
